bk_ida/gccida/c0/copy_body_r
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:793:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *fn; // [rsp+38h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:795:21: error: expected expression
fn = *( tree_node **)( *( _QWORD *)data + 8 * ( *( _QWORD *)( *( _QWORD *)data + 8LL) - 1LL) + 32); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:795:9: error: use of undeclared identifier 'tree_node'
fn = *( tree_node **)( *( _QWORD *)data + 8 * ( *( _QWORD *)( *( _QWORD *)data + 8LL) - 1LL) + 32); 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:813:11: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
else if ( lang_hooks_0.tree_inlining.auto_var_in_fn_p( *tp, fn) ) 
          ^~~~~~~~~~~~
          lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:813:54: error: called object type '<dependent type>' is not a function or function pointer
else if ( lang_hooks_0.tree_inlining.auto_var_in_fn_p( *tp, fn) ) 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:815:46: error: expected expression
new_decl = remap_decl( *tp, ( inline_data_0 *)data); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:815:31: error: use of undeclared identifier 'inline_data_0'
new_decl = remap_decl( *tp, ( inline_data_0 *)data); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:853:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( lang_hooks_0.tree_inlining.auto_var_in_fn_p( ( *tp)->vector.elements, fn) ) 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:853:49: error: called object type '<dependent type>' is not a function or function pointer
if ( lang_hooks_0.tree_inlining.auto_var_in_fn_p( ( *tp)->vector.elements, fn) ) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:883:54: error: expected expression
copy_scope_stmt( tp, walk_subtrees, ( inline_data_0 *)data); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/tree-inline.c:883:39: error: use of undeclared identifier 'inline_data_0'
copy_scope_stmt( tp, walk_subtrees, ( inline_data_0 *)data); 
                                      ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/copy_body_r/src/obj/tree-inline.o] Error 1
